--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.google.version}</version>
+            <scope>test</scope>
         </dependency>
 
 
